--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "swiper": "^11.1.15",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
